# scsd-lakitu-cubesat

./: .gitignore  .gitmodules  README.md  build_cloud_classes.py  requirements.txt  train_cloud_classifier.ipynb  train_cloud_regressor.ipynb
coral/: .gitignore  CMakeLists.txt  README.md  requirements.txt
coral/docs/: TODO.md  test_camera commands.txt
coral/src/: cloud_regressor.cc
coral/tools/: cloud_regressor_client.py  quant_check.py
firmware-stm32/: .gitignore  .mxproject  README.md  platformio.ini  scsd-lakitu-cubesat.ioc
firmware-stm32/Core/Inc/: datapool.h
firmware-stm32/Core/Inc/cdh/: cdh.h
firmware-stm32/Core/Inc/fsw/: fsm.h  fsm_thresholds.h
firmware-stm32/Core/Inc/ttc/: ttc.h
firmware-stm32/Core/Src/: datapool.c  main.c
firmware-stm32/Core/Src/cdh/: cdh.c
firmware-stm32/Core/Src/fsw/: fsm.c
firmware-stm32/docs/: ICD.md  Mission + Subsystem Requirements(Requirements).csv  fsm_diagram.puml  fsm_summary.html  sensor_parameters.html
interface_docs/: README.md
payload/: requirements.txt
payload/coral/: README.md
payload/coral/docs/: TODO.md  UART_PROTOCOL.md  test_camera_commands.txt
payload/coral/models/: cloud_regressor_qat_int8_edgetpu.tflite
payload/coral/patches/: coralmicro-board-h-lpuart7.patch
payload/coral/tools/: camera_fov_viewer.py
payload/training/: build_cloud_classes.py
payload/training/notebooks/: train_cloud_classifier.ipynb  train_cloud_regressor.ipynb
shared/: OBC_INTEGRATION.md  README.md  UART_PROTOCOL.md
training/: labels.json
training/notebooks/: train_cloud_regressor.ipynb
(+1 files in other folders)
